--- a/scripts/plots/chapter 3.ipynb
+++ b/scripts/plots/chapter 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "import sys\n",
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: QtAgg\n"
+     ]
+    }
+   ],
    "source": [
+    "%matplotlib\n",
     "#  Figure 3.1:\n",
     "\n",
     "price_series = awu[\"close\"][\"2019-01\":\"2020-01\"]\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "#  Figure 3.4:\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "\n",
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "#  Figure 3.6:\n",
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "from src.pypm import signals"
@@ -165,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "outputs": [],
    "source": [
-    "sig = signals.create_macd_signal(awu[\"close\"], n1=5, n2=100)\n",
+    "sig = signals.create_macd_signal(awu[\"close\"], n1=5, n2=50)\n",
     "\n",
     "sma5 = indicators.calculate_simple_moving_average(awu[\"close\"], n=5)\n",
-    "sma20 = indicators.calculate_simple_moving_average(awu[\"close\"], n=100)"
+    "sma20 = indicators.calculate_simple_moving_average(awu[\"close\"], n=50)"
    ],
    "metadata": {
     "collapsed": false,
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "def eq_op(ser, val):\n",
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "outputs": [
     {
      "name": "stdout",
@@ -211,8 +220,8 @@
     "%matplotlib\n",
     "fig, ax = plt.subplots(figsize=(14,8))\n",
     "ax.plot(awu['close'] , label = \"close price\", linewidth=3, color='cornflowerblue', alpha = 1, zorder=1)\n",
-    "ax.plot(sma5, label = 'SMA5', linewidth=1.5, alpha = 0.85, zorder=2)\n",
-    "ax.plot(sma20, label = 'SMA20', linewidth=1.5, alpha = 0.85, zorder=2)\n",
+    "ax.plot(sma5, label = 'SMA5', linewidth=1.5, alpha = 0.85, zorder=2, c=\"orange\")\n",
+    "ax.plot(sma20, label = 'SMA20', linewidth=1.5, alpha = 0.85, zorder=2, c=\"purple\")\n",
     "ax.scatter(awu.index, eq_op(sig, 1)*awu['close'] , label='Buy' , marker='^', color='green', zorder=3)\n",
     "ax.scatter(awu.index, eq_op(sig, -1)*awu['close'] , label='Sell' , marker='v', color='red', zorder=3)\n",
     "# ax.set_title(stocksymbols[0] + \" Price History with buy and sell signals\",fontsize=10, backgroundcolor='blue', color='white')\n",
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "sig = signals.create_bollinger_band_signal(awu[\"close\"], n=10)\n",
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "#%matplotlib\n",
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "outputs": [],
    "source": [],
    "metadata": {
